--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,13 @@
-<h2>Sign up</h2>
-
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="nav">
+    <%= link_to image_tag("arrow.png", width: '30'), root_path %>
+    <p class="center">REGISTER</p>
+    <p><%= f.submit "Next", class: 'submit' %></p>
   </div>
+  <%= render "devise/shared/error_messages", class:'errors', resource: resource %>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+  <%= f.text_field :name, autofocus: true, autocomplete: "name", placeholder:'Full Name', class:'input' %>
+  <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder:'Email', class:'input' %>
+  <%= f.password_field :password, autocomplete: "new-password", placeholder:'Password', class:'input' %>
+  <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder:'Confirm Password', class:'input' %>
 <% end %>
-
-<%= render "devise/shared/links" %>
