--- a/app/views/entities/_entity.html.erb
+++ b/app/views/entities/_entity.html.erb
@@ -1,22 +1,4 @@
-<div id="<%= dom_id entity %>">
-  <p>
-    <strong>Author:</strong>
-    <%= entity.author_id %>
-  </p>
-
-  <p>
-    <strong>Name:</strong>
-    <%= entity.name %>
-  </p>
-
-  <p>
-    <strong>Amount:</strong>
-    <%= entity.amount %>
-  </p>
-
-  <p>
-    <strong>Createdat:</strong>
-    <%= entity.createdAt %>
-  </p>
-
+<div id="<%= dom_id entity %>" class="entity">
+    <h5><%= entity.name %></h5>
+    <p><%= image_tag("calendar.png", width:'20px') %> <%= entity.created_at %></p>
 </div>
