--- a/app/views/entities/_form.html.erb
+++ b/app/views/entities/_form.html.erb
@@ -1,4 +1,9 @@
-<%= form_with(model: entity) do |form| %>
+<%= form_with(model: [@group, @entity]) do |form| %>
+<div class="nav">
+  <%= link_to image_tag("arrow.png", width: '20'), group_path(@group) %>
+  <p class="center">NEW TRANSACTION</p>
+  <h6></h6>
+</div>
   <% if entity.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(entity.errors.count, "error") %> prohibited this entity from being saved:</h2>
@@ -10,28 +15,9 @@
       </ul>
     </div>
   <% end %>
-
   <div>
-    <%= form.label :author_id, style: "display: block" %>
-    <%= form.text_field :author_id %>
-  </div>
-
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
-  </div>
-
-  <div>
-    <%= form.label :amount, style: "display: block" %>
-    <%= form.text_field :amount %>
-  </div>
-
-  <div>
-    <%= form.label :createdAt, style: "display: block" %>
-    <%= form.datetime_field :createdAt %>
-  </div>
-
-  <div>
-    <%= form.submit %>
+    <%= form.text_field :name, class:'input', placeholder:'Name' %>
+    <%= form.text_field :amount, class:'input', placeholder:'Amount' %>
+    <%= form.submit class:'btn' %>
   </div>
 <% end %>
