--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -10,28 +10,9 @@
       </ul>
     </div>
   <% end %>
-
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
-  </div>
-
-  <div>
-    <%= form.label :icon, style: "display: block" %>
-    <%= form.text_field :icon %>
-  </div>
-
-  <div>
-    <%= form.label :createdAt, style: "display: block" %>
-    <%= form.datetime_field :createdAt %>
-  </div>
-
-  <div>
-    <%= form.label :user_id, style: "display: block" %>
-    <%= form.text_field :user_id %>
-  </div>
-
-  <div>
-    <%= form.submit %>
+  <div class="form">
+    <%= form.text_field :name, placeholder: 'Name', class:'input' %>
+    <%= form.text_field :icon, placeholder: 'Image Link', class:'input' %>
+    <%= form.submit 'Create', class: 'btn' %>
   </div>
 <% end %>
