--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,9 +1,6 @@
-<h1>New group</h1>
-
-<%= render "form", group: @group %>
-
-<br>
-
-<div>
-  <%= link_to "Back to groups", groups_path %>
+<div class="nav">
+  <%= link_to image_tag("arrow.png", width: '30'), groups_path %>
+  <p class="center">NEW CATEGORY</p>
+  <h6></h6>
 </div>
+<%= render "form", group: @group %>
